# AI-CUSTOMER-SUPPORT-AGENT

./: Dockerfile  LICENSE  README.md  ai_enhancer.py  api.py  app.py  backend_service.py  env.py  inference.py  launch_local.py  llm_agent.py  logs.db  main.py  metrics.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  rule_agent.py  simulator.py  ticket_generator.py  tools.py  utils.py
server/: app.py
